--- a/site/layouts/work/list.html
+++ b/site/layouts/work/list.html
@@ -1,28 +1,35 @@
 {{ define "main" }}
 
-<div class="animate__animated animate__fadeIn w-full flex flex-wrap p-1">
-  {{ range (where site.RegularPages "Section" "work").ByDate.Reverse }}
+<div id="work-feed" class="animate__animated animate__fadeIn w-full flex flex-wrap p-1">
 
-      <a href="{{.Permalink}}" class="w-full md:w-1/2 2xl:w-1/3 p-1">
+    {{ $paginator := .Paginate (where site.RegularPages "Section" "work") }}
+    {{ range $paginator.Pages }}
 
-        <div class="h-80 2xl:h-96 relative group bg-aqua overflow-hidden" style="background:url({{.Params.image}}); background-size:cover; background-position: center;">
-          <div class="text-white overlay-text opacity-0 group-hover:opacity-100 transition-all text-4xl mix-blend-difference text-center leading-none">
+      <a href="{{.Permalink}}" class="tile w-full md:w-1/2 2xl:w-1/3 p-1">
+        <div class="h-80 2xl:h-96 relative group bg-aqua overflow-hidden">
+          <div class="text-white overlay-text z-20 opacity-0 group-hover:opacity-100 transition-all text-4xl mix-blend-difference text-center leading-none">
             {{ .Title }}
           </div>
+          <img src="{{ .Params.image }}" class="object-cover w-full h-full" alt="">
           {{ if .Params.thumbnailVideo }}
-            <video autoplay muted loop id="myVideo" class="thumbnail-video">
+            <video autoplay muted loop id="myVideo" class="thumbnail-video z-10">
               <source src="{{ .Params.thumbnailVideo }}" type="video/mp4">
             </video>
           {{ end }}
         </div>
-
       </a>
 
-  {{ end }}
+    {{ end }}
 </div>
 
-<div class="max-w-5xl mx-auto py-10">
-  {{ partial "contact-form" . }}
-</div>
+{{ partial "pagination" . }}
 
+<script type="text/javascript">
+  $('#work-feed').infiniteScroll({
+    path: '.pagination-next',
+    append: '.tile',
+    status: '.scroller-status',
+    hideNav: '.pagination',
+  });
+</script>
 {{ end }}
