--- a/site/layouts/partials/header.html
+++ b/site/layouts/partials/header.html
@@ -28,31 +28,31 @@
 	<div class="nav__content p-4 z-40 text-white">
 
 		<ul class="nav__list text-8xl md:text-9xl italic font-semibold leading-tight pb-20">
-      {{ range .Site.Data.navigation.nav }}
+      {{ range .Site.Data.settings.navigation.nav }}
         <li class="nav__list-item"><a href="{{ .URL | absURL }}">{{ .label }}</a></li>
       {{ end }}
 		</ul>
 
     <p class="text-4xl w-full normal-case mb-20 border-b border-t border-solid border-white py-20">
-      {{ .Site.Data.navigation.description }}
+      {{ .Site.Data.settings.navigation.description }}
     </p>
 
     <div class="trio w-full flex flex-wrap border-b border-solid border-white pb-20 mb-20">
       <ul class="w-1/2 md:w-1/3 lg:w-1/5 normal-case mb-3 md:mb-0">
         <h4 class="uppercase font-semibold mb-2">brands we bake with:</h4>
-        {{ range .Site.Data.navigation.brands }}
+        {{ range .Site.Data.settings.navigation.brands }}
           <li class="mb-2">{{ .label }}</li>
         {{ end }}
       </ul>
       <ul class="w-1/2 md:w-1/3 lg:w-1/5 normal-case">
         <h4 class="uppercase font-semibold mb-2">services:</h4>
-        {{ range .Site.Data.navigation.services }}
+        {{ range .Site.Data.settings.navigation.services }}
           <li class="mb-2">{{ .label }}</li>
         {{ end }}
       </ul>
       <ul class="w-1/2 md:w-1/3 lg:w-1/5 normal-case">
         <li class="uppercase font-semibold mb-2">Contact:</li>
-        <li>{{ .Site.Data.navigation.contact }}</li>
+        <li>{{ .Site.Data.settings.navigation.contact }}</li>
       </ul>
     </div>
 
