--- a/site/layouts/index.html
+++ b/site/layouts/index.html
@@ -49,7 +49,7 @@
       resolution: 'low_resolution',
       limit: 8,
       accessToken: 'IGQVJWQXhEeGZAZAaFJUMXpJWFJ1NTNjWjRVUS01R0JuY00xMm15cm1TRTZAiWVp0ZAGpwZADYzcEZAtelJrRVFLT294d3YxdFVjcU45UjZACS0EyUzFESmlzWk9BQjNoajNTd0JZAY2ZAZAa2ZAfRUd3T2R6UnRPWgZDZD',
-      template: '<a href="{{ "{{link}}" }}" target="_blank" class="flex group relative overflow-hidden mb-2 text-white"><div class="overlay-text w-full p-2 instagram z-20 opacity-0 group-hover:opacity-100 transition-all text-base text-center leading-none"><img src="img/insta-mini.svg" class="mx-auto mb-2" alt=""><p class="mix-blend-difference">{{ "{{caption}}" }}</p></div><img class="object-cover w-full h-full duration-1000 ease-in-out transform group-hover:scale-105" src="{{ "{{image}}" }}" class="pb-2"/></a>',
+      template: '<a href="{{ "{{link}}" }}" target="_blank" class="flex group relative overflow-hidden mb-2 text-white"><div class="overlay-text w-full p-2 instagram z-20 opacity-0 group-hover:opacity-100 transition-all text-base text-center leading-none mix-blend-difference"><img src="img/insta-mini.svg" class="mx-auto mb-2" alt=""><p class="mix-blend-difference">{{ "{{caption}}" }}</p></div><img class="object-cover w-full h-full duration-1000 ease-in-out transform group-hover:scale-105" src="{{ "{{image}}" }}" class="pb-2"/></a>',
     });
     userFeed.run();
   </script>
